<resources>
    <string name="app_name">Sirius</string>
    <string name="name">DoTA 2</string>
    <string name="rating">4.9</string>
    <string name="gradeCnt">70M</string>

    <string name="tags_1">MOBA</string>
    <string name="tags_2">MULTIPLAYER</string>
    <string name="tags_3">STRATEGY</string>

    <string name="review">Review &amp; Ratings</string>
    <string name="reviewCount">70M Reviews</string>

    <string name="description">Dota 2 is a multiplayer online battle arena (MOBA) game which has two
        teams of five players compete to collectively destroy a large structure defended by the
        opposing team known as the "Ancient", whilst defending their own."</string>

    <string name="userName_1">Auguste Conte</string>
    <string name="userName_2">Jang Marcelino</string>

    <string name="date">February 14, 2019</string>

    <string name="message">“Once you start to learn its secrets, there’s a wild and exciting variety
        of play here that’s unmatched, even by its peers.”</string>

    <string name="BTN">Install</string>
</resources>